# Timmy-time-dashboard

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_REPORT.md  Makefile  QUALITY_ANALYSIS.md  README.md  STATUS.md  activate_self_tdd.sh  pyproject.toml
.github/workflows/: tests.yml
dashboard-web/client/: index.html
dashboard-web/client/src/: App.tsx  index.css
dashboard-web/client/src/components/: ChatPanel.tsx  ContextPanel.tsx  MarketplacePanel.tsx  StatusSidebar.tsx  SwarmPanel.tsx  TasksPanel.tsx  TopBar.tsx
dashboard-web/client/src/lib/: data.ts
dashboard-web/client/src/pages/: Dashboard.tsx  NotFound.tsx
docs/: index.html
src/: config.py
src/dashboard/: app.py  store.py
src/dashboard/routes/: agents.py  health.py  luna.py  marketplace.py  mobile.py  mobile_test.py  swarm.py  swarm_ws.py  voice.py  voice_enhanced.py
src/dashboard/templates/: base.html  create_task.html  index.html  marketplace.html  mobile.html  mobile_test.html  swarm_live.html  voice_button.html  voice_enhanced.html
src/dashboard/templates/partials/: chat_message.html  health_status.html  history.html  luna_tickets.html  ticket_card.html
src/luna/: models.py  pipeline.py  store.py  transcriber.py
src/notifications/: push.py
src/self_tdd/: watchdog.py
src/shortcuts/: siri.py
src/swarm/: agent_runner.py  bidder.py  comms.py  coordinator.py  manager.py  registry.py  swarm_node.py  tasks.py
src/timmy/: __init__.py  agent.py  backends.py  cli.py  prompts.py
src/timmy_serve/: cli.py  inter_agent.py  l402_proxy.py  payment_handler.py  voice_tts.py
src/voice/: nlu.py
src/websocket/: handler.py
static/: style.css
tests/: conftest.py  test_agent.py  test_agent_runner.py  test_backends.py  test_cli.py  test_coordinator.py  test_dashboard.py  test_dashboard_routes.py  test_inter_agent.py  test_l402_proxy.py  test_luna_models.py  test_luna_pipeline.py  test_luna_routes.py  test_luna_store.py  test_mobile_scenarios.py  test_notifications.py  test_prompts.py  test_serve.py  test_shortcuts.py  test_swarm.py  test_swarm_integration.py  test_swarm_live_page.py  test_swarm_node.py  test_timmy_serve_cli.py  test_voice_enhanced.py  test_voice_nlu.py  test_watchdog.py  test_websocket.py  test_websocket_extended.py
